working on cloud function pattern

--- a/cf/index.html
+++ b/cf/index.html
@@ -1,5 +1,15 @@
-<form method="post">
-    <label for="serviceaccount">Service Account:</label><br>
-    <input type="text" id="serviceaccount" name="serviceaccount"><br>
-    <input type="submit" value="Submit">
-</form>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Service Account Form</title>
+</head>
+<body>
+    <h1>Submit Service Account</h1>
+    <form method="post">
+        <label for="service_account">Service Account:</label><br>
+        <input type="text" id="service_account" name="service_account"><br><br>
+        <input type="submit" value="Submit">
+    </form>
+</body>
+</html>
